--- a/linux/config/waybar/style.css
+++ b/linux/config/waybar/style.css
@@ -4,9 +4,8 @@
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-    color: #ffffff;
+    background-color: #476f95;
+    color: #fff;
     transition-property: background-color;
     transition-duration: .5s;
 }
@@ -16,14 +15,14 @@ window#waybar.hidden {
 }
 
 button {
-    box-shadow: inset 0 -3px transparent;
+    box-shadow: inset 0 -2px transparent;
     border: none;
     border-radius: 0;
 }
 
 button:hover {
     background: inherit;
-    box-shadow: inset 0 -3px #ffffff;
+    box-shadow: inset 0 -2px #ffffff;
 }
 
 #workspaces button {
@@ -37,8 +36,8 @@ button:hover {
 }
 
 #workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
+    background-color: #00202e;
+    box-shadow: inset 0 -2px #fbf2c4;
 }
 
 #workspaces button.urgent {
