--- a/linux/config/waybar/style.css
+++ b/linux/config/waybar/style.css
@@ -71,6 +71,7 @@ button:hover {
 #custom-crypto-btc,
 #custom-crypto-eth,
 #custom-crypto-xmr,
+#language,
 #mpd {
     color: #fff;
 }
@@ -92,6 +93,7 @@ button:hover {
 #custom-crypto-btc,
 #custom-crypto-eth,
 #custom-crypto-xmr,
+#language,
 #custom-mullvad {
     padding: 0 15px;
 }
@@ -184,8 +186,6 @@ label:focus {
 #language {
     background: #00b093;
     color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
     min-width: 16px;
 }
 
